fixed text wrapping when opening and closing sidenav

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,6 +108,7 @@ pre.progbarz-title code {
 }
 
 .sidenav a {
+  white-space: nowrap;
   padding: 8px  8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
